# com7wafr

./: .gitignore  LICENSE  README.md  deploy.sh  pyproject.toml  requirements.txt
.kiro/steering/: product.md  structure.md  tech.md
Design Web Example/: WA Review - Standalone.html  app.js  data.js  index.html  pages.js  styles.css
Design Web Example/scraps/: sketch-2026-04-18T20-39-40-vlqen1.napkin
backend/: package-lock.json  package.json  tsconfig.json
backend/auth/: auth-module.ts
backend/handlers/: account-handler.ts  ai-handler.ts  scan-handler.ts  team-handler.ts
cfn/: api.yaml  auth.yaml  data.yaml  frontend.yaml
checks/: __init__.py
checks/cloudfront/: __init__.py  checks.yaml
checks/cloudtrail/: __init__.py  checks.yaml
checks/cloudwatch_/: __init__.py  checks.yaml
checks/config_/: __init__.py  checks.yaml
checks/dynamodb/: __init__.py  checks.yaml
checks/ec2/: __init__.py  checks.yaml
checks/ecs/: __init__.py  checks.yaml
cli/: __init__.py  __main__.py  main.py
core/: __init__.py  account_manager.py  config_parser.py  models.py  report_generator.py  rule_engine.py  scanner.py  sts_client.py  wa_integration.py
dashboard/: index.html
docs/: architecture.drawio  data-flow.drawio
infra/: cdk.json  package-lock.json  package.json  tsconfig.json
installer/: install.sh
tests/: test_account_manager.py  test_backend_auth.py  test_backend_handlers_integration.py  test_config_parser.py  test_dynamodb_account_storage.py  test_file_account_storage.py  test_report_generator.py  test_rule_engine.py  test_scanner.py  test_sts_client.py
(+50 files in other folders)
